# doc2dic

./: .env.example  .gitignore  AGENTS.md  HOW_TO_TEST.md  IMPLEMENTATION_PLAN.md  README.md  README_EN.md  pyproject.toml
.opencode/agents/: analysis.md  api-server.md  contract-freeze.md  docs-handoff.md  glossary.md  graph.md  qa.md  review.md  storage.md  web.md
contracts/: openapi.yaml
contracts/schemas/: app_graph.schema.json  concept.schema.json  document.schema.json  document_chunk.schema.json  graph_snapshot.schema.json  graphify_projection.schema.json  issue_action_payload.schema.json  issue_action_request.schema.json  issue_evidence.schema.json  llm_conflict_classification.schema.json  llm_term_candidates.schema.json  term_issue.schema.json  term_occurrence.schema.json  term_variant.schema.json
docs/: architecture.md  data-model.md  graphify-integration.md  opencode-workflow.md  post-mvp.md
handoff/: README.md  analysis.md  api-server.md  cli-storage.md  contract-freeze.md  docs-handoff.md  glossary.md  graph.md  mcp-concept-mutation.md  physical-name.md  qa.md  review.md  storage.md  web-shell.md  web.md
samples/docs/: combat_core.md  dungeon_draft.md  ui_terms.md
samples/expected/: graph.json  issues.json  term_candidates.json
scripts/: dev-cli.sh  dev-web.sh  test.sh
src/doc2dic/: __init__.py  cli.py
tests/: test_smoke.py
tests/context/: __init__.py  test_explore_context_builder.py
tests/contracts/: __init__.py  test_agent_ownership_docs.py  test_public_contracts.py
tests/docs/: test_docs_commands.py
tests/e2e/: __init__.py  mvp_sample_support.py  test_mcp_sample_flow.py  test_mvp_sample_flow.py
tests/fixtures/: __init__.py  test_sample_expectations.py
tests/installer/: __init__.py  test_opencode_installer.py
tests/integration/: test_error_payloads.py  test_migrations.py  test_sqlite_locking.py  test_voyage_smoke.py  voyage_smoke_helper.py
tests/mcp/: test_cli_serve.py  test_doc2dic_explore.py  test_doc2dic_suggest_tags.py  test_mutation_guidance.py  test_mutation_schemas.py  test_mutation_server.py  test_mutation_tools.py  test_sdk_smoke.py
tests/review/: __init__.py  test_state_machine.py
tests/s2s_testdb/: config.toml  glossary.sqlite3
tests/search/: __init__.py  search_fixtures.py  test_search_index_repository.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: index.css  (+1 more)
(+199 files in other folders)
